# Crew-AI

./: README.md
first_proj_crewai_debate/: README.md  pyproject.toml
first_proj_crewai_debate/output/: judg_decide.md  oppose.md  propose.md
first_proj_crewai_debate/src/first_proj_crewai_debate/: crew.py  example_main.py  main.py
first_proj_crewai_debate/src/first_proj_crewai_debate/config/: agents.yaml  tasks.yaml
